--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ header .container {
 nav {
   display: flex;
   gap: 1.5rem;
+  justify-content: center;
 }
 
 nav a {
@@ -123,47 +124,16 @@ h1 span {
   margin-bottom: 0.5rem;
 }
 
-.player {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-top: 1rem;
-}
-
-.play-btn {
-  background: none;
-  border: none;
-  color: inherit;
-  font-size: 1.5rem;
-  cursor: pointer;
-}
-
-.progress {
-  flex: 1;
-  margin: 0 0.5rem;
-  background-color: #fff;
-  height: 4px;
-  border-radius: 2px;
-  position: relative;
-}
-
-.progress-bar {
-  background-color: #fff;
-  height: 100%;
-  border-radius: 2px;
-  width: 30%;
-}
-
 .info {
-  margin-top: 3rem;
+  margin-top: 4rem;
 }
 
 .info-title h3 {
   font-size: 2.5rem;
   font-weight: 700;
   color: #e45533;
-  line-height: 1.3;
-  margin-bottom: 2rem;
+  line-height: 1;
+  margin-bottom: 1.5rem;
 }
 
 .info-grid {
@@ -173,10 +143,10 @@ h1 span {
 }
 
 .info-block p {
-  font-size: 1.1rem;
-  color: #555;
+  font-size: 1rem;
+  color: #acacac;
   max-width: 350px;
-  line-height: 1.8;
+  line-height: 18px;
 }
 
 .highlight {
@@ -281,4 +251,5 @@ h1 span {
     text-decoration: underline;
   }
   /* Contact Section */
+  
 }
